# localGPT

./: .gitignore  constants.py  pyproject.toml  requirements.txt  run_localGPT.py
