# ==== black ====
[tool.black]
line-length = 119
target-version = ['py311']


# ==== isort ====
[tool.isort]
profile = "black"
line_length = 119
known_first_party = [
    "tests",
    "scripts",
    "hooks",
]

[tool.poetry]
name = "localgpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.268"
bitsandbytes = "^0.41.1"
streamlit = "^1.25.0"
Flask = "^2.3.2"
requests = "^2.31.0"
openpyxl = "^3.1.2"
huggingface-hub = "^0.16.4"
faiss-cpu = "^1.7.4"
transformers = "^4.31.0"
llama-cpp-python = "^0.1.78"
cython = "^3.0.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
